#
# $Id$
#

2.1.r1 -
======

- Updated for P12 version of NWS master host
- Added [-s] to logrotate in scheduler.conf
- Revised nbspmtr plot scripts and tclhttpd metar functions to
  plot the wind direction as well (suggested by Scott <ssshoema@gmail.com>).
- Added -r and -R options to the nbspmtrplot1 script.
- Text files are filetered through tr in (qrunner) to delete cntrl chars.
- Added option(s) to set servername to the wildcard address(es).

2.1.2p3 -

- Corrected setting of PATH in filters.conf (from configure.inc and Makefile)
- Added KGGE (SC) to metar stations (icao and st files. Scott Shoemaker)
- Added linespoints style (ls) keywords to gnuplot templates in metarfilter