@@ -30,10 +30,10 @@ and perhaps some flags. Currently, the only transport is smtp and the
 flags are "F" or "S" for sending the full file or a summary, respectively.
 In this case (smtp), the "who" is an email address.
 
-What each subscriber gets is specified by a combination of product
-codes and zones using a regular expression syntax. For each incoming
-product, the filter scans the subscriber list and it builds up
-a list of recipients according to the regexp matching rules.
+What each subscriber gets is specified by a combination of product codes
+and zones, or product codes and sites, using a regular expression syntax.
+For each incoming product, the filter scans the subscriber list and it
+builds up a list of recipients according to the regexp matching rules.
 
 Once the filter has collected the recipients list(s), one for the
 F flag and another for the S flag, it composes the messages and hands off
@@ -60,7 +60,9 @@ lappend subscribers {
 Here <prodzone_spec> is a comma-separated list of terms where each term
 has the form
 	
-	<prod_code_regex>_<zone_code_regex>	
+	<prod_code_regex>_<zone_code_regex>
+or
+	<prod_code_regex><size_code_regex>
 
 For example, given
 
@@ -73,6 +75,30 @@ lappend subscribers {
 then I would receive all svs and tor for TX zones 145 to 149, and also
 all SVR for VA zone 014. The comma separated list of product-zone
 combinations can be extended indefinitely.
+
+Another form is
+
+lappend subscribers {
+	smtp://nieves@noaaport.net
+	(svs|tor)jsj
+	<flags>
+}
+
+to specify a site instead of zones. Several sites can be combined in this way
+
+lappend subscribers {
+	smtp://nieves@noaaport.net
+	(svs|tor)(jsj|lix)
+	<flags>
+}
+
+and so on. The two forms can be combined in one spec
+
+lappend subscribers {
+	smtp://nieves@noaaport.net
+	(svs|tor)_txz14[5-9],svr_vaz014,afd(jsj|lix)
+	<flags>
+}
 
 The <flags> depend on the particular transport. For smtp
 it can be "F" or "S" to send the full file or the summary. Each
@@ -97,8 +123,8 @@ The list can be kept in a separate flat file, in the format
 
 E.g.,
 
-smtp://nieves@noaaport.net (svs|tor)_txz14[5-9],svr_vaz014 F;
-smtp://<phonenumber>@tms.suncom.com (svs|tor)_txz14[5-9] S;
+smtp://nieves@noaaport.net (svs|tor)-txz14[5-9],svr-vaz014 F;
+smtp://<phonenumber>@tms.suncom.com (svs|tor)-txz14[5-9] S;
 
 If such a flat list is kept in the file
 
@@ -116,3 +142,4 @@ examples illustrating all this.
 
 -
 Jose - Tue Jul  8 18:23:42 AST 2008
+     - Fri Jun  3 11:58:25 AST 2011
