@@ -117,6 +117,7 @@ proc process {prodname fpath} {
     filterlib_get_rcvars rc $prodname $fpath;
 
     set prod_code [string range $prodname 0 2];
+    set prod_site_code $prodname;
     set prod_body [::fileutil::cat -translation crlf $fpath];
     set ugczones [ugc_get_lines [split $prod_body "\n"]];
 
@@ -126,9 +127,15 @@ proc process {prodname fpath} {
     #	<destination> <prodzonespcec> <flags>;
     #
     # The <prodzonespcec> is a comma separated list of
-    # products and zone regexes:
+    # products and zone regexes, or product and site regexes
     #
-    # <prod_regex1>_<zone_regex1>,<prod_regex2>_<zone_regex2>,...
+    #     <prod_regex1>_<zone_regex1>,<prod_regex2>_<zone_regex2>,...
+    #
+    # or
+    #
+    #     <prod_regex1><site_regex1>,<prod_regex2><site_regex2>,...
+    #
+    # The two forms can be mixed in the comma-separated list.
 
     foreach sl $msgfilter(subscribers) {
 	foreach s $sl {
@@ -144,10 +151,20 @@ proc process {prodname fpath} {
 			[split $s_prodzone $msgfilter(pzseparator)];
 		set s_prod_code_regex [lindex $s_prodzone_parts 0];
 		set s_zone_code_regex [lindex $s_prodzone_parts 1];
-		if {[regexp $s_prod_code_regex $prod_code] && \
-			[regexp $s_zone_code_regex $ugczones]} {
-		    lappend sendtolist($s_addr_transp,$s_flags) $s_addr_dest;
 
+		if {$s_zone_code_regex eq ""} {
+	 	    #
+		    # The spec is <prod><site> without zones, and in this case
+	 	    # the match is tried with the awips code.
+		    #
+		    set match [regexp $s_prod_code_regex $prod_site_code];
+		} else {
+		    set match [expr [regexp $s_prod_code_regex $prod_code] && \
+			[regexp $s_zone_code_regex $ugczones]];
+		}
+
+		if {$match == 1} {
+		    lappend sendtolist($s_addr_transp,$s_flags) $s_addr_dest;
 		    break;
 		}
 	    }
@@ -176,15 +193,15 @@ proc msgfilter_dispatch {transport flags recipients \
     }
 
     set prod_summary [msgfilter_prod_summary $prod_code];
-    if {$flags eq "F"} {
-	append subject $prod_name " - " $prod_summary;
-	set body $prod_body;
-    } elseif {$flags eq "S"} {
-	set subject $prod_name;
-	append body $prod_summary;
+    if {[string first $flags "F"] >= 0} {
+        append subject $prod_name " - " $prod_summary;
+        set body $prod_body;
+    } elseif {[string first $flags "S"] >= 0} {
+        set subject $prod_name;
+        append body $prod_summary;
     } else {
-	log_msg "Invalid flag $flags";
-	return;
+        log_msg "Invalid flag $flags";
+        return;
     }
 
     msgfilter_smtp_send_txt $recipients $subject $body;
